// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AsideHeader renders with text 1`] = `

<h4 class="text-muted-foreground cursor-default text-sm font-medium capitalize">
  Test Header
</h4>

`;

exports[`AsideItem renders with a copy to clipboard feature 1`] = `

<div class="text-foreground flex items-center text-sm text-nowrap cursor-default gap-2">
  <span class="[&amp;>svg]:text-muted-foreground flex items-center justify-center empty:hidden">
  </span>
  <span class="text-sm">
    Copy this text
  </span>
</div>

`;

exports[`AsideItem renders with a count badge 1`] = `

<div class="text-foreground flex items-center text-sm text-nowrap cursor-default gap-2">
  <span class="[&amp;>svg]:text-muted-foreground flex items-center justify-center empty:hidden">
  </span>
  <gui-data-badge
    variant="count"
    content="5"
  >
  </gui-data-badge>
  <span class="text-sm">
    Test Count Item
  </span>
</div>

`;

exports[`AsideItem renders with a link 1`] = `

<gui-link
  href="https://www.acme.com"
  classname="text-foreground flex items-center text-sm text-nowrap cursor-pointer"
>
  <span class="[&amp;>svg]:text-muted-foreground flex items-center justify-center empty:hidden">
    <gui-link-icon size="16">
    </gui-link-icon>
  </span>
  <span class="text-sm">
    https://www.acme.com
  </span>
</gui-link>

`;

exports[`AsideItem renders with an icon 1`] = `

<div class="text-foreground flex items-center text-sm text-nowrap cursor-default gap-2">
  <span class="[&amp;>svg]:text-muted-foreground flex items-center justify-center empty:hidden">
    <gui-smile-icon size="16">
    </gui-smile-icon>
  </span>
  <span class="text-sm">
    Test Item
  </span>
</div>

`;

exports[`AsideSection renders with children 1`] = `

<div
  data-slot="aside-section"
  class="flex w-full flex-col gap-2"
>
  <div class="bg-background flex w-full flex-col gap-2 rounded px-6 py-3">
    Test Section Content
  </div>
</div>

`;
